--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BombermanMap.BombermanMap
-GameDefaultMap=/Game/BombermanMap.BombermanMap
-GlobalDefaultGameMode="/Script/BombermanMonitor.BombermanMonitorGameMode"
+EditorStartupMap=/Game/Maps/BombermanMap.BombermanMap
+GameDefaultMap=/Game/Maps/BombermanMap.BombermanMap
+GlobalDefaultGameMode=/Script/BombermanMonitor.BombermanMonitorGameModeBase
 GameInstanceClass=/Game/MyGameInstance.MyGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -51,3 +51,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+
