Добавлены таблица с очками и режимы просмотра

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/BombermanMap.BombermanMap
 GameDefaultMap=/Game/Maps/BombermanMap.BombermanMap
-GlobalDefaultGameMode=/Script/BombermanMonitor.BombermanMonitorGameModeBase
+GlobalDefaultGameMode=/Game/MyGameMode.MyGameMode_C
 GameInstanceClass=/Game/MyGameInstance.MyGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
